--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
-    <div class="header">
+<!-- Begin Header -->
+    <header> 
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,9 +23,12 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+<!-- End Header -->
+<!-- Begin Hero -->
     <div class="hero"></div>
+<!-- Enc Hero -->
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +52,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
