Changes to Hero and Content sections.  Utility styles.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,9 +27,10 @@
     </header>
 <!-- End Header -->
 <!-- Begin Hero -->
-    <div class="hero"></div>
-<!-- Enc Hero -->
-    <div class="content">
+    <section class="hero"></section>
+<!-- End Hero -->
+<!--- Begin Content Section-->
+    <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -52,7 +53,7 @@
             </p>
         </div>
     </div>
-
+<!-- End Content -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
