Condensed CSS under 'Marketing Types' section to remove redundancies and extra code.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,31 +29,31 @@
 <!-- Begin Hero -->
     <section class="hero"></section>
 <!-- End Hero -->
-<!--- Begin Content Section-->
-    <section class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+<!--- Begin Marketing Types Section-->
+    <section class="online-marketing">
+        <article id="search-engine-optimization" class="online-marketing-types">
+            <img src="./assets/images/search-engine-optimization.jpg"  class="float-left" alt="Notebook with SEO graphic." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </article>
+        <article id="online-reputation-management" class="online-marketing-types">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Computer with reputation graph." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </article>
+        <article id="social-media-marketing" class="online-marketing-types">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Colleagues gathered around a table discussing social media."  />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-<!-- End Content -->
+        </article>
+    </section>
+<!-- End Marketing Types -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
